<resources>
    <string name="app_name">FamilyMap</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="enter">Войти</string>
    <string name="user">Пользователь</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="registration">Регистрация</string>
    <string name="user_name">Имя пользователя</string>
    <string name="logout">Выйти</string>
    <string name="list_of_contacts">Список контактов</string>
    <string name="add_contact">+ добавить контакт</string>
    <string name="share_location">дать доступ к местоположению</string>
    <string name="show_location">показывать местоположение</string>
    <string name="save">Сохранить</string>
    <string name="new_contact">Новый контакт</string>
    <string name="add">Добавить</string>
    <string name="contact">контакт</string>
    <string name="login_fragment_header">Вы не представились</string>
    <string name="registration_fragment_header">Новый пользователь</string>
    <string name="delete">Удалить</string>
    <string name="error_updating_contact">Ошибка при изменении контакта</string>
    <string name="error_deleting_contact">Не удалось удалить контакт</string>
    <string name="error_adding_contact">Ошибка при добавлении контакта</string>
    <string name="no_auth_string">Пользователь не опередён</string>
    <string name="login_fails_regex_match">Логин может содержать только символы [a-zA-Z0-9а-яА-Я_.-]</string>
    <string name="password_fails_regex_match">Пароль может содержать только символы [a-zA-Z0-9а-яА-Я_.-]</string>
    <string name="password_and_repetition_are_not_equal">Пароли не совпадают</string>
    <string name="registration_error">Ошибка регистрации</string>
    <string name="log_in_error">Не удалось войти</string>
    <string name="location_unknown">Местоположение неизвестно</string>
    <string name="ask_adding_contact_notification">хочет добавить Вас в контакты</string>
    <string name="accept_contact_description">Новый контакт</string>
    <string name="accept_contact_reject_button">Не сохранять</string>
</resources>