<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".useractivity.ContactFragment">

    <TextView
        android:id="@+id/contactName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="32sp"
        />

    <TextView
        android:id="@+id/contactDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/contactName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="18sp"
        android:text="@string/contact"
        />

    <TextView
        android:id="@+id/loginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/contactDescription"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="20dp"
        android:textSize="20sp"
        android:text="@string/login"
        />

    <TextView
        android:id="@+id/loginView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/loginText"
        app:layout_constraintLeft_toRightOf="@id/loginText"
        android:textSize="20sp"
        android:layout_marginStart="10dp"
        />

    <CheckBox
        android:id="@+id/checkboxShareLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/shareLocationText"
        app:layout_constraintBottom_toBottomOf="@id/shareLocationText"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <TextView
        android:id="@+id/shareLocationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/loginText"
        app:layout_constraintLeft_toRightOf="@id/checkboxShareLocation"
        android:text="@string/share_location"
        android:textSize="20sp"
        />

    <CheckBox
        android:id="@+id/checkboxShowLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/showLocationText"
        app:layout_constraintBottom_toBottomOf="@id/showLocationText"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <TextView
        android:id="@+id/showLocationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/shareLocationText"
        app:layout_constraintLeft_toRightOf="@id/checkboxShowLocation"
        android:text="@string/show_location"
        android:textSize="20sp"
        />

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/showLocationText"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="25dp"
        android:visibility="gone"
        android:text="@string/save"
        />

    <Button
        android:id="@+id/delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/showLocationText"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="25dp"
        android:text="@string/delete"
        />

</androidx.constraintlayout.widget.ConstraintLayout>