<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".useractivity.RegistrationFragment">

    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="35sp"
        android:text="@string/registration_fragment_header"
        />

    <TextView
        android:id="@+id/labelForInputLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/inputLogin"
        app:layout_constraintBottom_toBottomOf="@id/inputLogin"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textSize="25sp"
        android:labelFor="@id/inputLogin"
        android:text="@string/login"
        />

    <EditText
        android:id="@+id/inputLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:minWidth="48dp"
        android:textSize="25sp"
        app:layout_constraintLeft_toRightOf="@id/labelForInputLogin"
        app:layout_constraintTop_toBottomOf="@id/header"
        android:importantForAutofill="no"
        />

    <TextView
        android:id="@+id/labelForInputPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/inputPassword"
        app:layout_constraintBottom_toBottomOf="@id/inputPassword"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textSize="25sp"
        android:labelFor="@id/inputPassword"
        android:text="@string/password"
        />

    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:minWidth="48dp"
        android:textSize="25sp"
        app:layout_constraintLeft_toRightOf="@id/labelForInputPassword"
        app:layout_constraintTop_toBottomOf="@id/inputLogin"
        android:importantForAutofill="no"
        />

    <TextView
        android:id="@+id/labelForInputRepeatPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/inputRepeatPassword"
        app:layout_constraintBottom_toBottomOf="@id/inputRepeatPassword"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textSize="25sp"
        android:labelFor="@id/inputPassword"
        android:text="@string/repeat_password"
        />

    <EditText
        android:id="@+id/inputRepeatPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:minWidth="48dp"
        android:textSize="25sp"
        app:layout_constraintLeft_toRightOf="@id/labelForInputRepeatPassword"
        app:layout_constraintTop_toBottomOf="@id/inputPassword"
        android:importantForAutofill="no"
        />

    <TextView
        android:id="@+id/labelForInputName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/inputName"
        app:layout_constraintBottom_toBottomOf="@id/inputName"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textSize="25sp"
        android:labelFor="@id/inputPassword"
        android:text="@string/user_name"
        />

    <EditText
        android:id="@+id/inputName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:minWidth="48dp"
        android:textSize="25sp"
        app:layout_constraintLeft_toRightOf="@id/labelForInputName"
        app:layout_constraintTop_toBottomOf="@id/inputRepeatPassword"
        android:importantForAutofill="no"
        />

    <Button
        android:id="@+id/registrationButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/inputName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/registration"
        />

    <Button
        android:id="@+id/logInButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/registrationButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@android:color/transparent"
        android:textColor="@color/black"
        android:text="@string/enter"
        />

</androidx.constraintlayout.widget.ConstraintLayout>